--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,21 @@
-/* write your override styles here */
+#wall .tag-1{
+  display: none;
+}
+#wall .tag-1.tag-2{
+  display: none;
+}
+#wall .tag-3 .slick{
+  display: none;
+}
+{
+  display: none;
+}
+{
+  display: none;
+}
+{
+  display: none;
+}
+{
+  display: none;
+}
