--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,21 +1,21 @@
 #wall .tag-1{
   display: none;
 }
-#wall .tag-1.tag-2{
+#wall #tag-2{
   display: none;
 }
-#wall .tag-3 .slick{
+#wall #tag-3{
   display: none;
 }
-{
+#wall > .parent{
   display: none;
 }
-{
+#wall .parent #tag-5{
   display: none;
 }
-{
+#wall .parent #tag-6{
   display: none;
 }
-{
+#wall .parent #tag-7{
   display: none;
 }
