--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,28 +1,28 @@
-#wall .tag-1{
+#wall .tag-1 {
   display: none;
 }
 
-#wall #tag-2{
+#wall #tag-2 {
   display: none;
 }
 
-#wall #tag-3{
+#wall #tag-3 {
   display: none;
 }
 
-#wall > .parent{
+#wall > .parent > #tag-4 {
   display: none;
 }
 
-#wall .parent #tag-5{
+#wall .parent #tag-5 {
   display: none;
 }
 
-#wall .parent #tag-6{
+#wall .parent #tag-6 {
   display: none;
 }
 
-#wall .parent #tag-7{
+#wall .parent #tag-7 {
   display: none;
 }
 
